--- a/bc-react/public/index.html
+++ b/bc-react/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <!-- react img -->
+    <script src="https://unpkg.com/react-image/umd/index.min.js"></script>
     <title>React App</title>
   </head>
   <body>
