--- a/bc-react/public/index.html
+++ b/bc-react/public/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <script type="text/javascript" src="./my-first-event-calendar/js/index.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
