moved header from root to components and added wrapper div to all views

--- a/bc-react/public/index.html
+++ b/bc-react/public/index.html
@@ -9,8 +9,9 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/Images/nick.jpg">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/Images/pancakes.png">
+    <!-- BOOTSTRAP IS COMMENTED OUT -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
